--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 </ul>
             </nav>
         </div>
+        <div class="haeder-text">
+            <p>UI/UX Designer</p>
+            <h1>Hi, I'm <span>Abhinandan </span><br> Kesarwani </h1>
     </div>
 </body>
 </html>
