--- a/index.html
+++ b/index.html
@@ -21,8 +21,33 @@
             </nav>
         </div>
         <div class="haeder-text">
-            <p>UI/UX Designer</p>
+            <p>Data Analyist</p>
             <h1>Hi, I'm <span>Abhinandan </span><br> Kesarwani </h1>
+    </div>
+    <!-- about -->
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="images/user.png">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">About Me</h1>
+                    <p>Explored aerospace at HAL, engaged with tech specialists at CDAC.
+                        Analyzed business at Bengaluru Darshini, understood telecom at BSNL.
+                        Experienced power generation, researched at Anna Library. Explored
+                        student life at VIT, immersed in IIT Madras Research Park. Interacted with
+                        professionals, trained in customer service, Metaverse, attended a
+                        sustainable energy seminar
+                    </p>
+                    <div class="tab-titles">
+                        <p class="tab-links active-link">Skills</p>
+                        <p class="tab-links">Experience</p>
+                        <p class="tab-links">Education</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
